# WeatherBot

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  scripts.py
.github/workflows/: lint.yml
weathebot/: main.py
weathebot/helpers/: generate.py
weathebot/openweather/: request_to_api.py
weatherbot/: main.py
weatherbot/helpers/: __init__.py  generate.py  keyboard.py
weatherbot/openweather/: __init__.py  request_to_api.py
